--- a/simpleserver/fileserver_nginx.conf
+++ b/simpleserver/fileserver_nginx.conf
@@ -1,6 +1,6 @@
 server {
 	listen 8000;
-	server_name 192.168.0.10;
+	server_name _; # Modify this with IP address, or domain.
 	charset utf-8;
 	client_max_body_size 75M;
 	location /media {
